--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,22 +16,17 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-
       - name: Install dependencies
-        run: bun i
+        run: yarn i
 
       - name: Check types
         run: bun run type-check
 
       - name: Check linting
-        run: bun run lint
+        run: yarn run lint
 
       - name: Run tests
-        run: bun test
+        run: yarn test
 
       - name: Check commits messages
         uses: wagoid/commitlint-github-action@v5
