--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,13 @@ jobs:
           fetch-depth: 0
 
       - name: Install dependencies
-        run: yarn i
+        run: yarn
 
       - name: Check types
-        run: bun run type-check
+        run: yarn type-check
 
       - name: Check linting
-        run: yarn run lint
+        run: yarn lint
 
       - name: Run tests
         run: yarn test
