--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^2.2.0",
+    "webpack": "^5.89.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "20.10.6",
@@ -55,12 +54,10 @@
       "eslint --fix ."
     ]
   },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
   "engines": {
     "node": ">=18.19.0"
+  },
+  "resolutions": {
+    "webpack": "^5.89.0"
   }
 }
