--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@material-ui/core": "^4.12.4",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "aos": "^2.3.4",
     "clsx": "^2.1.0",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-alice-carousel": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.0",
     "webpack": "^5.89.0",
     "zod": "^3.22.4"
@@ -55,7 +61,7 @@
     ]
   },
   "engines": {
-    "node": ">=18.19.0"
+    "node": ">=18.18.2"
   },
   "resolutions": {
     "webpack": "^5.89.0"
